docs(CLAUDE): document JPMS module-descriptor handling so it's recoverable
The "why module-info.java is hidden until the end" reasoning lived only in
pom.xml comments — invisible to a future session reading CLAUDE.md. Added a
"JPMS module descriptor handling" section under Build System summarizing the
three deliberate "keep the descriptor invisible" tricks (src/main/java9
placement, prepare-package timing vs Surefire module mode + lmdbjava
IllegalAccessError, javadoc-before-module-info ordering) and the lmdbjava
attribution of the internal-JDK flags, with pointers to the authoritative
pom comments. States the invariant: never let module-info.class reach
target/classes before tests and before the javadoc jar is built.