@@ -75,6 +75,44 @@ mode is unusable here — the module declares no `requires` and `module-info.jav
 in `src/main/java9`, off javadoc's source path). See the extensive comments on those two
 `pom.xml` executions before touching their phase or ordering.
 
+### JPMS module descriptor (`module-info.java`) handling — why it's hidden until the end
+
+BAF ships a JPMS module descriptor (module `net.ladenthin.bitcoinaddressfinder`, exports
+every package, `requires static lombok`, opens `configuration` to Jackson) **but goes to
+unusual lengths to keep `module-info` invisible to every build tool until the last moment.**
+This is the single most surprising part of the build; the authoritative rationale lives in
+the `pom.xml` comments on the `module-info-compile` and `default-testCompile` executions and
+the `maven-javadoc-plugin` block — read those before touching any of it. Summary:
+
+- **`module-info.java` lives in `src/main/java9`, not `src/main/java`.** If it were on the
+  main source path, `javac` would auto-flip the *whole* main compile into module mode, which
+  (a) breaks Error Prone / NullAway / Checker Framework and (b) forbids the system-module
+  `--add-exports`/`--add-opens` the build relies on. It is compiled alone, at `release 9`, in
+  a dedicated `module-info-compile` execution — purely an informational descriptor for
+  module-path consumers. (This is **not** a Java-8 leftover; BAF is Java 21. The Java-8 sibling
+  repos keep `module-info.java` in `src/main/java`, which is why they don't hit the javadoc bug.)
+- **`module-info-compile` is bound to `prepare-package` (after `test`).** If
+  `target/classes/module-info.class` exists during tests, Maven Surefire runs them in **JPMS
+  module mode** (main code as the *named* module on the module path) instead of on the
+  classpath (the *unnamed* module). The test JVM's `add-opens java.base/{sun.nio.ch,
+  jdk.internal.ref,java.nio}=ALL-UNNAMED` flags (see `<argLine>`) only open those packages to
+  the **unnamed** module, and **lmdbjava** (`LMDBPersistence` → `org.lmdbjava.ByteBufferProxy`)
+  reflectively reaches `sun.nio.ch.DirectBuffer` / `jdk.internal.ref.Cleaner` — so in module
+  mode they stop applying and LMDB tests fail with `IllegalAccessError` on
+  `sun.nio.ch.DirectBuffer`. Local-dev caveat: `mvn test` after `mvn package` without an
+  intervening `mvn clean` fails this way (the package phase left `module-info.class` behind).
+- **`attach-javadocs` runs at `prepare-package`, before `module-info-compile`** (the
+  `maven-javadoc-plugin` block is declared before `maven-compiler-plugin` so it wins the
+  same-phase ordering). Javadoc must see a module-descriptor-free `target/classes` so it stays
+  in classpath mode — see the "Verifying Javadoc locally" section above.
+- **The internal-JDK `--add-opens`/`--add-exports` are for lmdbjava, not project code.** The
+  only former internal-JDK user, `ByteBufferUtility#freeByteBuffer`, was deleted (direct
+  buffers are reclaimed by the JVM's built-in Cleaner); no project source imports
+  `jdk.internal.ref` or `sun.nio.ch`. The `jdk.compiler/*` opens are for Error Prone.
+
+**Invariant to preserve:** never let `module-info.class` reach `target/classes` before tests
+*and* before the javadoc jar is built. Both consumers (Surefire, javadoc) break in module mode.
+
 ---
 
 ## Project Structure
